apps/base/onlineboutique/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onlineboutique
  namespace: onlineboutique
spec:
  parentRefs:
    - name: platform-public
      sectionName: https
      namespace: infrastructure
  hostnames:
    - "onlineboutique.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: onlineboutique
          port: 80
